added event listener

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     .card img {
       width: 100%;
     }
+    .card .expanded {
+      transform: scale(1.5);
+    }
   </style>
   <body>
     <div class="card"></div>
